# Feishu_rename_bot

./: .gitignore  README.md  testproxy.py
fsbot_rename/: .env  bot.py  cleanup.py  config.py  extractor.py  lark_client.py  rename_helper.py  requirements.txt
fsbot_rename/output/: v3_56a313ff_aab4_49a_付款截图_2123  v3_b2cd9562_829a_4e9_付款截图_2123  绿联DP转HDMI转接_付款截图_59.90
maimai_bot/: .env  README.md  pyproject.toml
maimai_bot/data/: mc_status_data.json
maimai_bot/data/deadline/: tasks.json
maimai_bot/data/help/: help.json
maimai_bot/data/obsidian_helper/: community_plugins.json  help_index.json
maimai_bot/maimai_bot/plugins/deadline/: __init__.py  config.py
maimai_bot/maimai_bot/plugins/help/: __init__.py  config.py
maimai_bot/maimai_bot/plugins/obsidian_helper/: __init__.py  config.py
maimai_bot/maimai_bot/plugins/plus_one/: __init__.py
