[project]
name = "maimai_bot"
version = "0.1.0"
description = "maimai_bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V12", module_name = "nonebot.adapters.onebot.v12" },
    {name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11"},
    {name = "Minecraft", module_name = "nonebot.adapters.minecraft"}
]
plugins = ["nonebot_plugin_maimaidx", "nonebot_plugin_mc_server_status"]
plugin_dirs = ["maimai_bot/plugins"]
builtin_plugins = ["echo"]
